adds support for most words in a game feature
